task-86405-fixed cookie popup spacing issue

--- a/application/views/css/frontend-ltr.css
+++ b/application/views/css/frontend-ltr.css
@@ -3265,13 +3265,7 @@ p {
   .listing-dropdown ul li {
     margin-bottom: var(--margin-4); }
     .listing-dropdown ul li:last-child {
-      margin-bottom: 0; }
-    .listing-dropdown ul li .checkbox .input-helper::before {
-      left: 3px;
-      bottom: 6.1px; }
-    .listing-dropdown ul li .checkbox .input-helper::after {
-      left: 6px;
-      bottom: 3px; }
+      margin-bottom: var(--margin-0); }
 
 .filter-group__inner {
   cursor: pointer; }
