--- a/scss/frontend/pages/_listing.scss
+++ b/scss/frontend/pages/_listing.scss
@@ -696,24 +696,13 @@ $filter-secondary: "filter-secondary";
         li{
             margin-bottom: var(--margin-4);
             &:last-child{
-                margin-bottom: 0;
-            }
-
-            .checkbox{
-                .input-helper{
-                    &::before{
-                        left: 3px;
-                        bottom: 6.1px;
-                    }
-                    &::after{
-                        left: 6px;
-                        bottom: 3px;
-                    }
-                }
+                margin-bottom: var(--margin-0);
             }
         }
     }
 }
+
+
 
 .filter-group__inner{
     cursor: pointer;
